# indb

./: .gitignore  README.md  build.sbt  help.txt  indb.cabal  my-list.json  my-list.xml  stack.yaml
cli/: Main.hs
core/INDB/: Netflix.hs  TMDB.hs  Types.hs
src/main/scala/com/github/ktonga/indb/: HTTP.scala  IMDB.scala  INDB.scala  Netflix.scala  OMDB.scala  Types.scala  package.scala
