name:                indb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ktonga/indb
license:             MIT
-- license-file:        LICENSE
author:              Gaston Tonietti
maintainer:          gaston.tonietti@gmail.com
copyright:           2017 Gaston Tonietti
category:            Entertainment
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      core
  exposed-modules:     INDB.Types
                     , INDB.Netflix
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , stringsearch
                     , wreq
                     , lens
                     , text
                     , safe
                     , aeson
                     , lens-aeson
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ktonga/indb
