name:                indb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ktonga/indb
license:             MIT
license-file:        LICENSE
author:              Gaston Tonietti
maintainer:          gaston.tonietti@gmail.com
copyright:           2017 Gaston Tonietti
category:            Entertainment
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ktonga/indb

library
  hs-source-dirs:      core
  exposed-modules:     INDB.Types
                     , INDB.Netflix
                     , INDB.TMDB
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , stringsearch
                     , wreq
                     , lens
                     , text
                     , safe
                     , aeson
                     , lens-aeson
                     , vector
                     , modern-uri
  default-language:    Haskell2010

executable indb
  main-is:             Main.hs
  hs-source-dirs:      cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5
                     , indb
                     , optparse-applicative
  default-language:    Haskell2010
